# openenv-hackathon-sf

./: .dockerignore  .gitignore  README.md  __init__.py  baselines.py  client.py  compat.py  config.py  conftest.py  models.py  openenv.yaml  prompts.py  pyproject.toml  scenario_schema.py  scoring.py  serialization.py  vectors.ipynb
data/: README.md  demo_story_cards.json  scenarios_test.jsonl  scenarios_train.jsonl  scenarios_val.jsonl
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  ENVIRONMENT_SPEC.md  HF_SPACE_DEPLOYMENT.md  SCORER_PLUGIN_GUIDE.md  TRAINING_AND_EVAL.md
notebooks/: adaptive_persona_env_minimal_colab.ipynb
scripts/: create_sample_rollouts.py  eval_baselines.py  eval_model.py  export_demo_traces.py  make_requirements_txt.py  run_demo.sh  run_local_server.sh  smoke_test.py
server/: Dockerfile  __init__.py  app.py  environment.py  local_hf.py  persona_sampler.py  requirements.txt  reward_pipeline.py  simulator.py  simulator_base.py  simulator_factory.py  simulator_local_hf.py  simulator_mock.py  simulator_openai_compatible.py  trace.py  utils.py  web_ui.py
tests/: __init__.py  test_baselines.py  test_environment.py  test_scenarios.py  test_scoring.py  test_serialization.py
training/: README.md  __init__.py  build_dataset.py  colab_eval.py  colab_train_grpo.py  prompting.py  reward_adapter.py  rollout.py
